# tzxml

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: db.py  main.py  xml.py
src/tzxml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
